--- a/PathTraversal/PathTraversal.csproj
+++ b/PathTraversal/PathTraversal.csproj
@@ -48,11 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Edge.cs" />
-    <Compile Include="FindPath.cs" />
     <Compile Include="Graph.cs" />
+    <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Node.cs" />
-    <Compile Include="Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
