--- a/PathTraversalTests/PathTraversalTests.csproj
+++ b/PathTraversalTests/PathTraversalTests.csproj
@@ -60,7 +60,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="FindPathTests.cs" />
+    <Compile Include="GraphTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
